[lworld] CCP fails to optimize FlatArrayCheckNode

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • repo-valhalla
    • Affects Version/s: repo-valhalla
    • Component/s: hotspot

      # assert(!t->is_flat() && !t->is_not_flat()) failed: Should have been optimized out

      Current CompileTask:
      C2: 388771 32750 b java.util.concurrent.ConcurrentLinkedQueue$CLQSpliterator::trySplit (132 bytes)

      Stack: [0x00007f5e6d3fc000,0x00007f5e6d4fd000], sp=0x00007f5e6d4f8490, free space=1009k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x13d2be6] PhaseMacroExpand::expand_flatarraycheck_node(FlatArrayCheckNode*)+0x106
      V [libjvm.so+0x13db581] PhaseMacroExpand::expand_macro_nodes()+0xd71
      V [libjvm.so+0xa37b40] Compile::Optimize()+0x1800
      V [libjvm.so+0xa397bd] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x199d
      V [libjvm.so+0x85720c] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1dc
      V [libjvm.so+0xa49670] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xca0
      V [libjvm.so+0xa4a178] CompileBroker::compiler_thread_loop()+0x5a8
      V [libjvm.so+0x196d816] JavaThread::thread_main_inner()+0x256
      V [libjvm.so+0x1974560] Thread::call_run()+0x100
      V [libjvm.so+0x162bc86] thread_native_entry(Thread*)+0x116

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: