8257166: [lworld] CCP fails to optimize FlatArrayCheckNode